...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        leading: IconButton(
          key: const Key('arrowBack'),
          icon: const Icon(Icons.arrow_back),
          onPressed: () {
            Navigator.pop(context);
          },
        ),
        centerTitle: true,
...
                },
              );
            }

            if (state is ManufacturerInfoLoadedState) {
              return ListView.separated(
                key: const Key('manufactureInfoListView'),
                padding: EdgeInsets.symmetric(
                  horizontal: 15.w,
                  vertical: 20.h,
                ),
                itemCount: manufacturersList.length,
                separatorBuilder: (context, index) => SizedBox(height: 20.h),
...
