...
                },
              );
            }

            if (state is ManufacturersLoadedState) {
              return ListView.separated(
                key: const Key('manufactureListView'),
                controller: scrollController,
                padding: EdgeInsets.symmetric(
                  horizontal: 15.w,
                  vertical: 20.h,
                ),
                itemCount: manufacturersList.length,
...
